@@ -12,7 +12,7 @@ Inactive/former developers:
   * Viktor Kojouharov (Виктор Кожухаров)
  
 Patches (in no special order):
-  * Konstantin Stepanov (:%foo support)
+  * Konstantin Stepanov (:%foo support, :tabduplicate)
   * Lukas Mai
   * Guido Van Hoecke
   * Daniel Trstenjak (various things with hints)
